force-app/main/default/objects/Risk_Profile_Entitlement__c/Risk_Profile_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Risk Profile Entitlement</label>
    <nameField>
        <label>Risk Profile Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Profile Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>