force-app/main/default/objects/Risk_Profile_Entitlement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Risk Profile Entitlements</relationshipLabel>
    <relationshipName>Risk_Profile_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>