force-app/main/default/objects/Risk_Profile_Entitlement__c/fields/Entitlement_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Expiry_Date__c</fullName>
    <formula>Entitlement__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Expiry Date</label>
    <type>Date</type>
</CustomField>